experimental/parser/testdata/parser/expr.proto.stderr.txt
error: unexpected range expression in option setting value
  --> testdata/parser/expr.proto:21:21
   |
21 | option (test.any) = 1 to 100;
   |                     ^^^^^^^^

error: unexpected array expression in option setting value
  --> testdata/parser/expr.proto:22:21
   |
22 | option (test.any) = [1, 2, 3];
   |                     ^^^^^^^^^
   = note: array expressions can only appear inside of message expressions
   = help: break this option setting into one per element

error: unexpected qualified name in message field value
  --> testdata/parser/expr.proto:29:5
   |
29 |     foo.bar: "x",
   |     ^^^^^^^ expected message field name, extension name, or `Any` type URL

error: unexpected qualified name in message field value
  --> testdata/parser/expr.proto:31:5
   |
31 |     foo.bar {},
   |     ^^^^^^^ expected message field name, extension name, or `Any` type URL

error: unexpected integer literal in message field value
  --> testdata/parser/expr.proto:33:9
   |
33 |         1: "x",
   |         ^ expected message field name, extension name, or `Any` type URL

error: unexpected string literal in message field value
  --> testdata/parser/expr.proto:34:9
   |
34 |         "foo": "x"
   |         ^^^^^ expected message field name, extension name, or `Any` type URL
  help: remove the quotes
   |
34 | -         "foo": "x"
34 | +         foo: "x"
   |

error: unexpected integer literal in message field value
  --> testdata/parser/expr.proto:35:9
   |
35 |         1 {
   |         ^ expected message field name, extension name, or `Any` type URL

error: unexpected string literal in message field value
  --> testdata/parser/expr.proto:36:13
   |
36 |             "foo" {
   |             ^^^^^ expected message field name, extension name, or `Any` type URL
  help: remove the quotes
   |
36 | -             "foo" {
36 | +             foo {
   |

error: unexpected array expression in option setting value
  --> testdata/parser/expr.proto:44:21
   |
44 | option (test.bad) = [1: 2];
   |                     ^^^^^^
   = note: array expressions can only appear inside of message expressions
   = help: break this option setting into one per element

error: unexpected integer literal in message expression
  --> testdata/parser/expr.proto:45:22
   |
45 | option (test.bad) = {1, 2, 3};
   |                      ^ expected message field value

error: unexpected integer literal in message expression
  --> testdata/parser/expr.proto:45:25
   |
45 | option (test.bad) = {1, 2, 3};
   |                         ^ expected message field value

error: unexpected integer literal in message expression
  --> testdata/parser/expr.proto:45:28
   |
45 | option (test.bad) = {1, 2, 3};
   |                            ^ expected message field value

error: unexpected `;` after `-`
  --> testdata/parser/expr.proto:46:22
   |
46 | option (test.bad) = -;
   |                      ^ expected expression

error: unexpected range expression in option setting value
  --> testdata/parser/expr.proto:47:21
   |
47 | option (test.bad) = 1 to;
   |                     ^^^^

error: unexpected `;` after `to`
  --> testdata/parser/expr.proto:47:25
   |
47 | option (test.bad) = 1 to;
   |                         ^ expected expression

encountered 15 errors
